--- a/.github/workflows/news_summary.yml
+++ b/.github/workflows/news_summary.yml
@@ -1,23 +1,44 @@
 name: Daily News Summary
+
 on:
   schedule:
-    - cron: "0 9 * * *"  # 毎日UTC9:00（日本時間18:00）
-  workflow_dispatch:      # 手動実行用
+    - cron: "0 9 * * *"  # UTC9:00（日本時間18:00）に毎日実行
+  workflow_dispatch:      # 手動実行可能
+
 jobs:
   summarize:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run script
+          
+      - name: Run News Summarizer
         env:
+          # NewsAPI設定
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          SELECT_TOP_N: ${{ secrets.SELECT_TOP_N || 5 }}  # デフォルト5件
+          MAX_ARTICLES: ${{ secrets.MAX_ARTICLES || 20 }} # デフォルト20件
+          SEARCH_KEYWORDS: ${{ secrets.SEARCH_KEYWORDS }}
+          
+          # 通知先設定
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          
+          # AIモデル設定
+          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL || 'gpt-3.5-turbo' }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GEMINI_MODEL: ${{ secrets.GEMINI_MODEL || 'gemini-1.0-pro' }}
+          
+          # 翻訳設定
+          TARGET_LANGUAGE: ${{ secrets.TARGET_LANGUAGE || 'ja' }}
+          
         run: python main.py
-        
