--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-requests
-openai
-python-dotenv
+requests==2.31.0
+python-dotenv==1.0.0
+openai==1.12.0
+google-generativeai==0.3.2
+python-dateutil==2.9.0.post0
